<resources>
    <string name="app_name">IsThereAnyDeal</string>
    <string name="oauth_prompt">Sign in with IsThereAnyDeal</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_display_game">DisplayGameActivity</string>
    <string name="action_settings">Settings</string>
    <string name="itad_api">https://api.isthereanydeal.com</string>
    <string name="steam_api_base">http://store.steampowered.com/api/</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="co_operative_game">Co-Operative Game</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Settings: General -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_country">Country</string>
    <string-array name="pref_country_list_titles">
        <item>Albania</item>
        <item>Andorra</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Belgium</item>
        <item>Bosnia and Herzegovina</item>
        <item>Brazil</item>
        <item>Bulgaria</item>
        <item>Canada</item>
        <item>China</item>
        <item>Croatia</item>
        <item>Cyprus</item>
        <item>Czech Republic</item>
        <item>Denmark</item>
        <item>Estonia</item>
        <item>Finland</item>
        <item>France</item>
        <item>Germany</item>
        <item>Greece</item>
        <item>Hungary</item>
        <item>Ireland</item>
        <item>Italy</item>
        <item>Latvia</item>
        <item>Liechtenstein</item>
        <item>Lithuania</item>
        <item>Luxembourg</item>
        <item>Macedonia</item>
        <item>Malta</item>
        <item>Monaco</item>
        <item>Montenegro</item>
        <item>Netherlands</item>
        <item>Norway</item>
        <item>Poland</item>
        <item>Portugal</item>
        <item>Romania</item>
        <item>Russia</item>
        <item>San Marino</item>
        <item>Serbia</item>
        <item>Slovakia</item>
        <item>Slovenia</item>
        <item>Spain</item>
        <item>Sweden</item>
        <item>Switzerland</item>
        <item>Turkey</item>
        <item>United Kingdom</item>
        <item>United States</item>
        <item>Vatican City</item>
    </string-array>
    <string-array name="pref_country_list_values">
        <item>AL, €, EUR, eu1</item>
        <item>AD, €, EUR, eu1</item>
        <item>AU, $, USD, au</item>
        <item>AT, €, EUR, eu1</item>
        <item>BE, €, EUR, eu1</item>
        <item>BA, €, EUR, eu2</item>
        <item>BR, $, USD, br</item>
        <item>BG, €, EUR, eu2</item>
        <item>CA, $, CAD, ca</item>
        <item>CN, ¥, CNY, cn</item>
        <item>HR, €, EUR, eu2</item>
        <item>CY, €, EUR, eu2</item>
        <item>CZ, €, EUR, eu2</item>
        <item>DK, €, EUR, eu1</item>
        <item>EE, €, EUR, eu2</item>
        <item>FI, €, EUR, eu1</item>
        <item>FR, €, EUR, eu1</item>
        <item>DE, €, EUR, eu1</item>
        <item>GR, €, EUR, eu2</item>
        <item>HU, €, EUR, eu2</item>
        <item>IE, €, EUR, eu1</item>
        <item>IT, €, EUR, eu2</item>
        <item>LV, €, EUR, eu2</item>
        <item>LI, €, EUR, eu1</item>
        <item>LT, €, EUR, eu2</item>
        <item>LU, €, EUR, eu1</item>
        <item>MK, €, EUR, eu1</item>
        <item>MT, €, EUR, eu2</item>
        <item>MC, €, EUR, eu2</item>
        <item>ME, €, EUR, eu2</item>
        <item>NL, €, EUR, eu1</item>
        <item>NO, €, EUR, eu2</item>
        <item>PL, €, EUR, eu2</item>
        <item>PT, €, EUR, eu2</item>
        <item>RO, €, EUR, eu2</item>
        <item>RU, руб, RUB, ru</item>
        <item>SM, €, EUR, eu2</item>
        <item>RS, €, EUR, eu2</item>
        <item>SK, €, EUR, eu2</item>
        <item>SI, €, EUR, eu2</item>
        <item>ES, €, EUR, eu2</item>
        <item>SE, €, EUR, eu1</item>
        <item>CH, €, EUR, eu1</item>
        <item>TR, TL, TRY, tr</item>
        <item>GB, £, GBP, uk</item>
        <item>US, $, USD, us</item>
        <item>VA, €, EUR, eu2</item>
    </string-array>

    <string name="pref_title_preferred_stores">Preferred Stores</string>
    <string-array name="pref_store_list_titles">
        <item>Amazon</item>
        <item>Bundle Stars</item>
        <item>Coinplay.io</item>
        <item>DLGamer</item>
        <item>Desura</item>
        <item>Direct2Drive</item>
        <item>DotEmu</item>
        <item>FireFlower</item>
        <item>FunStock Digital</item>
        <item>GOG</item>
        <item>GameBillet</item>
        <item>GameStop PC</item>
        <item>GamersGate</item>
        <item>GamesPlanet DE</item>
        <item>GamesPlanet FR</item>
        <item>GamesPlanet UK</item>
        <item>GamesRepblic</item>
        <item>GreenMan Gaming</item>
        <item>Humble Store</item>
        <item>Humble Widgets</item>
        <item>Imperial Games</item>
        <item>IndieGala Store</item>
        <item>IndoeGameStand</item>
        <item>MacGameStore</item>
        <item>Newegg</item>
        <item>Nuuvem</item>
        <item>Origin PC</item>
        <item>Playfield</item>
        <item>SilaGames</item>
        <item>Square Enix</item>
        <item>Steam</item>
        <item>Uplay PC</item>
        <item>WinGameStore</item>
    </string-array>
    <string-array name="pref_store_list_values">
        <item>amazon</item>
        <item>bundlestars</item>
        <item>coinplay.io</item>
        <item>dlgamer</item>
        <item>desura</item>
        <item>direct2drive</item>
        <item>dotemu</item>
        <item>fireflower</item>
        <item>funstockdigital</item>
        <item>gog</item>
        <item>gamebillet</item>
        <item>gamestoppc</item>
        <item>gamersgate</item>
        <item>gamesplanetde</item>
        <item>gamesplanetfr</item>
        <item>gamesplanet</item>
        <item>gamesrepblic</item>
        <item>greenmangaming</item>
        <item>humblestore</item>
        <item>humblewidgets</item>
        <item>imperialgames</item>
        <item>indiegalastore</item>
        <item>indoegamestand</item>
        <item>macgamestore</item>
        <item>newegg</item>
        <item>nuuvem</item>
        <item>originpc</item>
        <item>playfield</item>
        <item>silagames</item>
        <item>squareenix</item>
        <item>steam</item>
        <item>uplaypc</item>
        <item>wingamestore</item>
    </string-array>

    <!-- Settings: Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- Settings: Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <string name="pref_title_send_usage_data">Send Usage Data</string>
</resources>
