<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="example_switch"
        android:summary="@string/pref_description_social_recommendations"
        android:title="@string/pref_title_social_recommendations" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="example_text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name" />

    <ListPreference
        android:defaultValue="GB, £, GBP, uk"
        android:entries="@array/pref_country_list_titles"
        android:entryValues="@array/pref_country_list_values"
        android:key="country_list"
        android:title="@string/pref_title_country" />

    <MultiSelectListPreference
        android:defaultValue="@array/pref_store_list_values"
        android:entries="@array/pref_store_list_titles"
        android:entryValues="@array/pref_store_list_values"
        android:key="store_list"
        android:title="@string/pref_title_preferred_stores" />

</PreferenceScreen>
